# proxy-checker-rust

./: Cargo.toml  readme.md
files/: dead.txt  live.txt  proxies.txt
src/: main.rs
