[package]
name = "proxy-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }

[dependencies.async-std]
version = "1.10.0"
features = ["attributes", "tokio1"]